* Fixed SimSurvNonp to get the right distribution and level of censoring * Added a few roxygen comments, still needs some completion

--- a/CoxHD/DESCRIPTION
+++ b/CoxHD/DESCRIPTION
@@ -10,9 +10,11 @@ Description: This package includes two extension of the Cox proportional
     selection.
 Depends:
     glmnet,
-    survival
-License:
-	GPL-3
+    survival,
+    mice,
+    parallel,
+    MASS
+License: GPL-3
 Collate:
     'CoxCPSS.R'
     'CoxRFX.R'
