--- a/CoxHD/NAMESPACE
+++ b/CoxHD/NAMESPACE
@@ -2,10 +2,16 @@ export(CoxCPSS)
 export(CoxCPSSInteractions)
 export(CoxRFX)
 export(ErrorControlCPSS)
+export(MakeInteger)
+export(MakeInteractions)
 export(PartialC)
 export(PartialRisk)
 export(PartialRiskVar)
 export(plot.CoxCPSS)
 export(PredictRiskMissing)
+export(SimDataNonp)
+export(SimSurvNonp)
 export(StandardizeMagnitude)
+export(TestInteractions)
 export(VarianceComponents)
+S3method(plot,CoxCPSS)
