* Export ImputeXMissing() * Help pages for ImputeXMissing()

--- a/CoxHD/NAMESPACE
+++ b/CoxHD/NAMESPACE
@@ -6,6 +6,7 @@ export(CoxCPSS)
 export(CoxCPSSInteractions)
 export(CoxRFX)
 export(ErrorControlCPSS)
+export(ImputeXMissing)
 export(MakeInteger)
 export(MakeInteractions)
 export(PartialC)
