--- a/CoxHD/DESCRIPTION
+++ b/CoxHD/DESCRIPTION
@@ -2,11 +2,12 @@ Package: CoxHD
 Type: Package
 Title: High-dimensional extensions of the Cox proportional hazards model
 Version: 0.0.1
-Date: 2014-04-29
+Date: 2014-08-12
 Author: Moritz Gerstung
 Maintainer: <mg14@sanger.ac.uk>
-Description: This package includes two extension of the Cox proportional
-    hazards model: A Random effects model and complementary pairs stability
+Description: This package includes two extensions of the Cox proportional
+    hazards model and tools for non-parametric simulation of survival data.
+    The main models are a Random effects model and complementary pairs stability
     selection.
 Depends:
     glmnet,
