News features: * PlotVarianceComponents() function

--- a/CoxHD/NAMESPACE
+++ b/CoxHD/NAMESPACE
@@ -12,6 +12,7 @@ export(MakeInteractions)
 export(PartialC)
 export(PartialRisk)
 export(PartialRiskVar)
+export(PlotVarianceComponents)
 export(PredictRiskMissing)
 export(SimDataNonp)
 export(SimSurvNonp)
