--- a/CoxHD/DESCRIPTION
+++ b/CoxHD/DESCRIPTION
@@ -16,3 +16,10 @@ Depends:
     parallel,
     MASS
 License: GPL-3
+Collate:
+    'CoxCPSS.R'
+    'CoxRFX.R'
+    'Experimental.R'
+    'Simulate.R'
+    'Tools.R'
+    'r_concave_tail.R'
