Updates: * MakeTimeDependent() to split a data.frame by a time-dependent covariate into pre- and post event observations for survival analyses. * Help pages * Restructured source code

--- a/CoxHD/NAMESPACE
+++ b/CoxHD/NAMESPACE
@@ -6,6 +6,7 @@ export(ErrorControlCPSS)
 export(ImputeXMissing)
 export(MakeInteger)
 export(MakeInteractions)
+export(MakeTimeDependent)
 export(PartialC)
 export(PartialRisk)
 export(PartialRiskVar)
