Refactorings: CoxRFX() * Adjusted nomenclature (Z) in line with common RFX notation.

--- a/CoxHD/NAMESPACE
+++ b/CoxHD/NAMESPACE
@@ -3,7 +3,7 @@ export(CoxCPSS)
 export(CoxCPSSInteractions)
 export(CoxRFX)
 export(ErrorControlCPSS)
-export(ImputeXMissing)
+export(ImputeMissing)
 export(MakeInteger)
 export(MakeInteractions)
 export(MakeTimeDependent)
