--- a/CoxHD/NAMESPACE
+++ b/CoxHD/NAMESPACE
@@ -15,7 +15,7 @@ export(PredictRiskMissing)
 export(SimDataNonp)
 export(SimSurvNonp)
 export(StandardizeMagnitude)
-export(TestInteractions)
+export(TestInteractionsCPH)
 export(VarianceComponents)
 export(plot.CoxCPSS)
 export(plot.CoxRFX)
