--- a/CoxHD/DESCRIPTION
+++ b/CoxHD/DESCRIPTION
@@ -6,9 +6,9 @@ Date: 2014-05-09 09:49:19
 Author: Moritz Gerstung
 Maintainer: <mg14@sanger.ac.uk>
 Description: This package includes two extensions of the Cox proportional
-    hazards model for high-dimensional regression and tools for non-parametric simulation of survival data.
-    The main models are a random effects model and complementary pairs stability
-    selection.
+    hazards model for high-dimensional regression and tools for non-parametric
+    simulation of survival data. The main models are a random effects model and
+    complementary pairs stability selection.
 Depends:
     glmnet,
     survival,
