--- a/CoxHD/NAMESPACE
+++ b/CoxHD/NAMESPACE
@@ -17,7 +17,10 @@ export(SimSurvNonp)
 export(StandardizeMagnitude)
 export(TestInteractionsCPH)
 export(VarianceComponents)
+export(WaldTest)
 export(plot.CoxCPSS)
 export(plot.CoxRFX)
 export(predict.CoxCPSS)
 export(print.CoxCPSS)
+export(print.CoxRFX)
+export(summary.CoxRFX)
