--- a/CoxHD/DESCRIPTION
+++ b/CoxHD/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CoxHD
 Type: Package
 Title: High-dimensional extensions of the Cox proportional hazards model
-Version: 0.0.40
-Date: Tue 20 Jan 2015 16:01:24 GMT
+Version: 0.0.41
+Date: Tue Jan 20 16:06:39 GMT 2015
 Author: Moritz Gerstung
 Maintainer: <mg14@sanger.ac.uk>
 Description: This package includes two extensions of the Cox proportional
