--- a/CoxHD/DESCRIPTION
+++ b/CoxHD/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CoxHD
 Type: Package
 Title: High-dimensional extensions of the Cox proportional hazards model
-Version: 0.0.43
-Date: Fri Feb 13 15:52:12 GMT 2015
+Version: 0.0.44
+Date: Tue Feb 17 13:49:38 GMT 2015
 Author: Moritz Gerstung
 Maintainer: <mg14@sanger.ac.uk>
 Description: This package includes two extensions of the Cox proportional
@@ -16,7 +16,8 @@ Depends:
     MASS,
     RColorBrewer
 Imports:
-	mg14
+    mg14
 Suggests:
-    coxme
+    coxme,
+    mvtnorm
 License: GPL-3
