Added ape() function to compute absolute prediction errors.

--- a/CoxHD/NAMESPACE
+++ b/CoxHD/NAMESPACE
@@ -23,7 +23,9 @@ export(StandardizeMagnitude)
 export(TestInteractionsCPH)
 export(VarianceComponents)
 export(WaldTest)
+export(ape)
 export(print.CoxCPSS)
 export(print.CoxRFX)
 export(summary.CoxRFX)
+export(survStatus)
 importFrom(mg14,sig2star)
