--- a/CoxHD/NAMESPACE
+++ b/CoxHD/NAMESPACE
@@ -9,6 +9,7 @@ export(CoxCPSSInteractions)
 export(CoxRFX)
 export(ErrorControlCPSS)
 export(ImputeMissing)
+export(ImputeXMissing)
 export(MakeInteger)
 export(MakeInteractions)
 export(MakeTimeDependent)
@@ -22,6 +23,7 @@ export(SimSurvNonp)
 export(StandardizeMagnitude)
 export(TestInteractionsCPH)
 export(VarianceComponents)
+export(VarianceComponentsCI)
 export(WaldTest)
 export(ape)
 export(print.CoxCPSS)
