--- a/CoxHD/DESCRIPTION
+++ b/CoxHD/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: CoxHD
 Type: Package
 Title: High-dimensional extensions of the Cox proportional hazards model
-Version: 0.0.58
-Date: Wed Feb 3 12:15:57 GMT 2016
+Version: 0.0.59
+Date: Mon Feb 8 12:30:26 GMT 2016
 Author: Moritz Gerstung
-Maintainer: <mg14@sanger.ac.uk>
+Maintainer: <moritz.gerstung@ebi.ac.uk>
 Description: This package includes two extensions of the Cox proportional
     hazards model for high-dimensional regression and tools for non-parametric
     simulation of survival data. The main models are a random effects model and
