Fixed warnings in R CMD check

--- a/CoxHD/NAMESPACE
+++ b/CoxHD/NAMESPACE
@@ -3,6 +3,9 @@
 S3method(plot,CoxCPSS)
 S3method(plot,CoxRFX)
 S3method(predict,CoxCPSS)
+S3method(print,CoxCPSS)
+S3method(print,CoxRFX)
+S3method(summary,CoxRFX)
 S3method(terms,CoxCPSS)
 export(CoxCPSS)
 export(CoxCPSSInteractions)
@@ -26,8 +29,13 @@ export(VarianceComponents)
 export(VarianceComponentsCI)
 export(WaldTest)
 export(ape)
-export(print.CoxCPSS)
-export(print.CoxRFX)
-export(summary.CoxRFX)
 export(survStatus)
-importFrom(mg14,sig2star)
+import(MASS)
+import(RColorBrewer)
+import(mg14)
+import(parallel)
+import(survival)
+importFrom(glmnet,glmnet)
+importFrom(mice,complete)
+importFrom(mice,mice)
+importFrom(mvtnorm,rmvnorm)
