--- a/CoxHD/DESCRIPTION
+++ b/CoxHD/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CoxHD
 Type: Package
 Title: High-dimensional extensions of the Cox proportional hazards model
-Version: 0.0.60
-Date: Mon Feb 8 12:34:59 GMT 2016
+Version: 0.0.61
+Date: Wed Apr 20 14:48:56 BST 2016
 Author: Moritz Gerstung
 Maintainer: <moritz.gerstung@ebi.ac.uk>
 Description: This package includes two extensions of the Cox proportional
@@ -10,14 +10,15 @@ Description: This package includes two extensions of the Cox proportional
     simulation of survival data. The main models are a random effects model and
     complementary pairs stability selection.
 Depends:
-    glmnet,
     survival,
     parallel,
-    MASS,
-    RColorBrewer,
-    mvtnorm
+    RColorBrewer
 Imports:
-    mg14
+    glmnet,
+    MASS,
+    mg14,
+    mvtnorm,
+    mice
 Suggests:
     coxme
 License: GPL-3
